more piano key logic added

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,2 +1,27 @@
-<h1>Songs#new</h1>
-<p>Find me in app/views/songs/new.html.erb</p>
+<div id = "piano">
+	<ul class="set">
+	<li class="white b" data-key="65">F3</li>
+		<span>A</span>
+	<li class="black as" data-key="87">F3#</li>
+		<span>W</span>
+	<li class="white a" data-key="83">G3 </li>
+		<span>S</span>
+	<li class="black gs" data-key="87">G3# </li>
+		<span>E</span>
+	<li class="white g" data-key="87">A3</li>
+		<span>D</span>
+	<li class="black fs" data-key="82">A3#</li>
+		<span>R<span>
+	<li class="white f" data-key="70"> B3</li>
+		<span>F</span>
+		<li class="white e" data-key="87">C4</li>
+			<span>G</span>
+		<li class="black ds" data-key="89">C4#</li>
+	 		<span>Y</span>
+		<li class="white d" data-key="72">D4</li>
+	 		<span>H</span>
+		<li class="black cs" data-key="85">D4#</li>
+			<span>U</span>
+		<li class="white c" data-key="74">E4</li>
+			<span>J</span>
+</ul>
