--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,26 +10,31 @@
   </head>
 
   <body>
-
-  <% if notice %>
-  <p class="alert alert-success"><%= notice %></p>
-<% end %>
-<% if alert %>
-  <p class="alert alert-danger"><%= alert %></p>
-<% end %>
-
-
-
-<p class="navbar-text pull-right">
-<% if user_signed_in? %>
-  Logged in as <strong><%= current_user.email %></strong>.
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-<% else %>
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-<% end %>
-</p>
-    <%= yield %>
+    <div class="container-fluid">
+      
+      <% if user_signed_in? %>
+      <nav class="nav justify-content-end">
+        Logged in as <strong><%= current_user.email %></strong>.
+        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'btn btn-default btn-lg' %>
+        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'btn btn-default btn-lg' %>
+      </nav>
+      <% else %>
+      <nav class="nav justify-content-end">
+        <div class="justify-content-end">
+          <%= link_to "Sign up", new_user_registration_path, :class => 'btn btn-default btn-lg' %>
+          <%= link_to "Login", new_user_session_path, :class => 'btn btn-default btn-lg' %>
+        </div>
+      </nav>
+      <% end %>
+      
+      
+      <%= yield %>
+      <% if notice %>
+        <p class="alert alert-success"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+        <p class="alert alert-danger"><%= alert %></p>
+      <% end %>
+    </div>
   </body>
 </html>
