--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Welcome To Piano Press </h1>
 <p>Feel the Breeze</p>
+
+<%= link_to 'New Song', new_song_path %>
+<p><%= link_to 'profile', home_path(current_user.id) %></p>
+
+
