--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   <body>
     <div class="container-fluid">
       
+      <nav>
+        <%= link_to 'Piano', edit_user_registration_path, :class => 'btn btn-default btn-lg' %>
+      </nav>
       <% if user_signed_in? %>
       <nav class="nav justify-content-end">
         Logged in as <strong><%= current_user.email %></strong>.
