--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,21 +12,27 @@
   <body>
     <div class="container-fluid">
       
-      <nav>
-        <%= link_to 'Piano', edit_user_registration_path, :class => 'btn btn-default btn-lg' %>
-      </nav>
+
       <% if user_signed_in? %>
+      <nav class="nav justify-content-start">
+        <%= link_to 'Songs', songs_path, :class => 'btn btn-default btn-lg' %>
+        <%= link_to 'Piano', new_song_path, :class => 'btn btn-default btn-lg' %>
+      </nav>
       <nav class="nav justify-content-end">
         Logged in as <strong><%= current_user.email %></strong>.
         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'btn btn-default btn-lg' %>
         <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'btn btn-default btn-lg' %>
       </nav>
       <% else %>
+      <nav class="nav justify-content-start">
+        <%= link_to 'Songs', songs_path, :class => 'btn btn-default btn-lg' %>
+        <%= link_to 'Piano', new_song_path, :class => 'btn btn-default btn-lg' %>
+      </nav>
       <nav class="nav justify-content-end">
-        <div class="justify-content-end">
+        
           <%= link_to "Sign up", new_user_registration_path, :class => 'btn btn-default btn-lg' %>
           <%= link_to "Login", new_user_session_path, :class => 'btn btn-default btn-lg' %>
-        </div>
+        
       </nav>
       <% end %>
       
