In Gemfile, removed redundant instance of bootstrap and jquery-rails gems, resolved with bootstrap gem version 4.0.0 on line 67. Issue with bundle aborting resolved.

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,13 +1,13 @@
 <!-- Must leave as first div with set id to call the javascript onto this page -->
 <div id= "piano">
 	<ul class="set">
-	
+
 		<div id="octave-3">
 			<li class="white b" id="65" data-key="65" data-frequency="174.61">F3</li>
 				<li>A</li>
 			<li class="black as" id="87" data-key="87" data-frequency="185.00">F3#</li>
 				<li>W</li>
-			<li class="white a" id="83" data-key="83" data-frequency="196.00">G3 </li>
+			<li class="white a" id="83" data-key="83" data-frequency="196.00">G3</li>
 				<li>S</li>
 			<li class="black gs" id="69" data-key="69" data-frequency="207.65">G3# </li>
 				<li>E</li>
@@ -15,7 +15,7 @@
 				<li>D</li>
 			<li class="black fs" id="82" data-key="82" data-frequency="233.08">A3#</li>
 				<li>R<li>
-			<li class="white f" id="70" data-key="70" data-frequency="246.94"> B3</li>
+			<li class="white f" id="70" data-key="70" data-frequency="246.94">B3</li>
 				<li>F</li>
 		</div>
 
@@ -33,4 +33,8 @@
 		</div>
 
 	</ul>
+</div>
+
+<div>
+	form goes here
 </div>
