--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,8 +2,12 @@
 <div id= "piano">
 	<ul class="set">
 
-		<div id="octave-3">
-			<li class="white b" id="65" data-key="65" data-frequency="174.61">F3</li>
+		<div class="octave-3">
+			<li class="white b" id="65" data-key="65" data-frequency="174.61">
+				<div class="legend">
+					F3/A
+				</div>
+			</li>
 				<li>A</li>
 			<li class="black as" id="87" data-key="87" data-frequency="185.00">F3#</li>
 				<li>W</li>
@@ -19,7 +23,7 @@
 				<li>F</li>
 		</div>
 
-		<div id="octave-4">
+		<div class="octave-4">
 			<li class="white e" id="71" data-key="71" data-frequency="264.63">C4</li>
 				<li>G</li>
 			<li class="black ds" id="89" data-key="89" data-frequency="277.18">C4#</li>
