adjusted keyboard margins and padding. Set .set class position to unset to keep it centered in the viewport.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,15 +18,25 @@
 #piano { box-sizing: border-box; }
 
 .set {
-	height:18.875em; width:40em;
-  margin:5em auto; padding:3em 0 0 3em; position:relative;
+	height:20em; 
+	width:36em;
+	margin:5em auto; 
+	padding:3em 3em 0 3em; 
+	position:unset;
   border:1px solid #160801; border-radius:1em;
   background:-webkit-gradient(linear, right bottom, left top, color-stop(0%,rgba(0,0,0,0.3)), color-stop(100%,rgba(0,0,0,0)));
 	box-shadow:0 0 50px rgba(0,0,0,0.5) inset, 0 1px rgba(212,152,125,0.2) inset,0 5px 15px rgba(0,0,0,0.5); 
 }
 
+.keys {
+	align-content: center;
+	margin: 2em auto;
+}
+
 .white-key {
-	height:16em; width:4em; z-index:1;
+	height:16em; 
+	width:4em; 
+	z-index:1;
 	border-left:1px solid #bbb;
 	border-bottom:1px solid #bbb;
 	border-radius:0 0 5px 5px;
@@ -43,7 +53,10 @@
 }
 
 .black-key {
-	height:8em; width:2em; margin:0 0 0 -1em; z-index:2;
+	height:8em; 
+	width:2em; 
+	margin:0 0 0 -1em; 
+	z-index:2;
 	border:1px solid #000;
 	border-radius:0 0 3px 3px;
 	box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset, 0 -5px 2px 3px rgba(0,0,0,0.6) inset, 0 2px 4px rgba(0,0,0,0.5);
@@ -60,12 +73,14 @@
 
 .legend-wk {
 	margin-top: 10em;
-	margin-left: .5em
+	text-align: center;
 }
 
 .legend-bk {
-	margin-top: 10em;
-	margin-left: .5em
+	margin-top: 4em;
+	text-align: center;
+	color: white;
+	font-size: 65%;
 }
 
 
