--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,41 +1,85 @@
 <!-- Must leave as first div with set id to call the javascript onto this page -->
 <div id= "piano">
 	<ul class="set">
+		<div class="keys">
+		
+			<div class="octave-3">
+				<li class="white-key b" id="65" data-key="65" data-frequency="174.61">
+					<div class="legend-wk">
+						F3<br>A
+					</div>
+				</li>
 
-		<div class="octave-3">
-			<li class="white-key b" id="65" data-key="65" data-frequency="174.61">
-				<div class="legend">
-					F3/A
-				</div>
-			</li>
-				<li>A</li>
-			<li class="black-key as" id="87" data-key="87" data-frequency="185.00">F3#</li>
-				<li>W</li>
-			<li class="white-key a" id="83" data-key="83" data-frequency="196.00">G3</li>
-				<li>S</li>
-			<li class="black-key gs" id="69" data-key="69" data-frequency="207.65">G3# </li>
-				<li>E</li>
-			<li class="white-key g" id="68" data-key="68" data-frequency="220.00">A3</li>
-				<li>D</li>
-			<li class="black-key fs" id="82" data-key="82" data-frequency="233.08">A3#</li>
-				<li>R<li>
-			<li class="white-key f" id="70" data-key="70" data-frequency="246.94">B3</li>
-				<li>F</li>
+				<li class="black-key as" id="87" data-key="87" data-frequency="185.00">
+					<div class="legend-bk">
+						F3#<br>W
+					</div>
+				</li>
+
+				<li class="white-key a" id="83" data-key="83" data-frequency="196.00">
+					<div class="legend-wk">
+						G3<br>S
+					</div>
+				</li>
+
+				<li class="black-key gs" id="69" data-key="69" data-frequency="207.65">
+					<div class="legend-bk">
+						G3#<br>E
+					</div>
+				</li>
+
+				<li class="white-key g" id="68" data-key="68" data-frequency="220.00">
+					<div class="legend-wk">
+						A3<br>D
+					</div>
+				</li>
+
+				<li class="black-key fs" id="82" data-key="82" data-frequency="233.08">
+					<div class="legend-bk">
+						A3#<br>R
+					</div>
+				</li>
+
+				<li class="white-key f" id="70" data-key="70" data-frequency="246.94">
+					<div class="legend-wk">
+						B3<br>F
+					</div>
+				</li>
+			</div>
+
+			<div class="octave-4">
+				<li class="white-key e" id="71" data-key="71" data-frequency="264.63">
+					<div class="legend-wk">
+						C4<br>G
+					</div>
+				</li>
+
+				<li class="black-key ds" id="89" data-key="89" data-frequency="277.18">
+					<div class="legend-bk">
+						C4#<br>Y
+					</div>
+				</li>
+
+				<li class="white-key d" id="72" data-key="72" data-frequency="293.66">
+					<div class="legend-wk">
+						D4<br>H
+					</div>
+				</li>
+
+				<li class="black-key cs" id="85" data-key="85" data-frequency="311.13">
+					<div class="legend-bk">
+						D4#<br>U
+					</div>
+				</li>
+
+				<li class="white-key c" id="74" data-key="74" data-frequency="329.63">
+					<div class="legend-wk">
+						E4<br>J
+					</div>
+				</li>
+			</div>
+			
 		</div>
-
-		<div class="octave-4">
-			<li class="white-key e" id="71" data-key="71" data-frequency="264.63">C4</li>
-				<li>G</li>
-			<li class="black-key ds" id="89" data-key="89" data-frequency="277.18">C4#</li>
-	 			<li>Y</li>
-			<li class="white-key d" id="72" data-key="72" data-frequency="293.66">D4</li>
-	 			<li>H</li>
-			<li class="black-key cs" id="85" data-key="85" data-frequency="311.13">D4#</li>
-				<li>U</li>
-			<li class="white-key c" id="74" data-key="74" data-frequency="329.63">E4</li>
-				<li>J</li>
-		</div>
-
 	</ul>
 </div>
 
