adjusted margins on piano div classes for static formatting with programmed keys

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,9 +28,15 @@
 	box-shadow:0 0 50px rgba(0,0,0,0.5) inset, 0 1px rgba(212,152,125,0.2) inset,0 5px 15px rgba(0,0,0,0.5); 
 }
 
+.brand {
+	text-align: center;
+	font-size: 1.75em;
+	margin-top: -1em;
+}
+
 .keys {
-	align-content: center;
-	margin: 2em auto;
+	margin-top: 1em;
+	margin-left: 1em;
 }
 
 .white-key {
@@ -68,7 +74,8 @@
 	background:linear-gradient(left, #444 0%,#222 100%);
 }
 
-.a,.g,.f,.d,.c { margin:0 0 0 -1em;
+.a,.g,.f,.d,.c { 
+	margin:0 0 0 -1em;
 }
 
 .legend-wk {
