--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,8 +1,9 @@
 <!-- Must leave as first div with set id to call the javascript onto this page -->
 <div id= "piano">
 	<ul class="set">
+		<p class="brand">Piano Brand</p>
 		<div class="keys">
-		
+
 			<div class="octave-3">
 				<li class="white-key b" id="65" data-key="65" data-frequency="174.61">
 					<div class="legend-wk">
