--- a/app/views/homes/profile.html.erb
+++ b/app/views/homes/profile.html.erb
@@ -1,1 +1,1 @@
-  <%# <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %>  %>
+   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %>
