--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', "https://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js "%>
+    <%= javascript_include_tag 'application', "mohamed"%>
   </head>
 
   <body>
