change the styling

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -37,7 +37,7 @@
 
   <!-- The following element pulls in the script for the default template functionality -->
       
-    <script src="assets/install.js"></script>  
+    <script src="/assets/mohamed2.js"></script>  
 
     <!-- Below is your custom application script -->
 
