animated piano keys

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,7 @@
  	background: white;
  }
 
- .white-key:active {
+ .white-animate {
  	border-top:1px solid #777;
  	border-left:1px solid #999;
  	border-bottom:1px solid #999;
@@ -68,7 +68,7 @@
  	background:linear-gradient(45deg, #222 0%,#555 100%);
  }
 
- .black-key:active {
+ .black-animate {
  	box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset, 0 -2px 2px 3px rgba(0,0,0,0.6) inset, 0 1px 2px rgba(0,0,0,0.5);
  	background:linear-gradient(left, #444 0%,#222 100%);
  }
