--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,17 +15,39 @@
 
 @import "bootstrap";
 
-#piano { box-sizing: border-box; }
+body {
+	background: black;
+	
+}
+
+nav {
+	justify-content: center;
+
+}
+
+// button {
+// 	.dark {
+// 		opacity: 60%;
+// 	}
+// }
+
+#piano { 
+	box-sizing: border-box; 
+}
 
 .set {
 	height:20em; 
 	width:36em;
 	margin:5em auto; 
 	padding:3em 3em 0 3em; 
-	position:unset;
-  border:1px solid #160801; border-radius:1em;
-  background:-webkit-gradient(linear, right bottom, left top, color-stop(0%,rgba(0,0,0,0.3)), color-stop(100%,rgba(0,0,0,0)));
+	position: unset;
+	border:1px solid #160801; border-radius:1em;
+	background:-webkit-gradient(linear, right bottom, left top, color-stop(0%,rgba(0,0,0,0.3)), color-stop(100%,rgba(0,0,0,0)));
 	box-shadow:0 0 50px rgba(0,0,0,0.5) inset, 0 1px rgba(212,152,125,0.2) inset,0 5px 15px rgba(0,0,0,0.5); 
+}
+
+.backdrop	{
+	background-color: white;
 }
 
 .brand {
@@ -41,7 +63,7 @@
 
 .white-key {
 	height:16em; 
-	width:4em; 
+	width:4em;
 	z-index:1;
 	border-left:1px solid #bbb;
 	border-bottom:1px solid #bbb;
