--- a/app/views/homes/profile.html.erb
+++ b/app/views/homes/profile.html.erb
@@ -1,1 +1,5 @@
+<h2 class="text-center">Welcome back <%= @user.username %></h2>
 
+
+
+<%= link_to 'Edit Profile', edit_user_registration_path, :class => 'btn btn-light btn-lg' %>
