--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,28 +12,27 @@
   <body>
     <div class="container-fluid">
       
-
       <% if user_signed_in? %>
       <nav class="nav">
         <div class="justify-content-start">
-          <%= link_to 'Songs', songs_path, :class => 'btn btn-default btn-lg' %>
-          <%= link_to 'Piano', new_song_path, :class => 'btn btn-default btn-lg' %>
+          <%= link_to 'Songs', songs_path, :class => 'btn btn-light btn-lg' %>
+          <%= link_to 'Piano', new_song_path, :class => 'btn btn-light btn-lg' %>
         </div>
         <div class="justify-content-end">
           Logged in as <strong><%= current_user.email %></strong>.
-          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'btn btn-default btn-lg' %>
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'btn btn-default btn-lg' %>
+          <%= link_to 'Profile', profile_path(current_user.id), :class => 'btn btn-light btn-lg' %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'btn btn-light btn-lg' %>
         </div>
       </nav>
       <% else %>
       <nav class="nav">
         <div class="justify-content-start">
-          <%= link_to 'Songs', songs_path, :class => 'btn btn-default btn-lg' %>
-          <%= link_to 'Piano', new_song_path, :class => 'btn btn-default btn-lg' %>
+          <%= link_to 'Songs', songs_path, :class => 'btn btn-light btn-lg' %>
+          <%= link_to 'Piano', new_song_path, :class => 'btn btn-light btn-lg' %>
         </div>
         <div class="justify-content-end">
-          <%= link_to "Sign up", new_user_registration_path, :class => 'btn btn-default btn-lg' %>
-          <%= link_to "Login", new_user_session_path, :class => 'btn btn-default btn-lg' %>
+          <%= link_to "Sign up", new_user_registration_path, :class => 'btn btn-light btn-lg' %>
+          <%= link_to "Login", new_user_session_path, :class => 'btn btn-light btn-lg' %>
         </div>
       </nav>
       <% end %>
@@ -41,10 +40,10 @@
       
       <%= yield %>
       <% if notice %>
-        <p class="alert alert-success"><%= notice %></p>
+        <p class="alert alert-dark"><%= notice %></p>
       <% end %>
       <% if alert %>
-        <p class="alert alert-danger"><%= alert %></p>
+        <p class="alert alert-dark"><%= alert %></p>
       <% end %>
     </div>
   </body>
