--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-<div class="col-4">
+  <div class="col-4">
   </div>
     <div class="card col-4 p-3 border-dark">
       <div class="card-header">
@@ -12,6 +12,11 @@
           <div class="field">
             <%= f.label :email %><br />
             <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          </div>
+
+          <div class="field">
+            <%= f.label :username %><br />
+            <%= f.username_field :username, autofocus: true %>
           </div>
 
           <div class="field">
