fixed merge errors

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,6 +1,10 @@
+<!-- Must leave as first div with set id to call the javascript onto this page -->
+<div id= "piano">
+</div>
+
 <link href='http://fonts.googleapis.com/css?family=Dancing+Script:700' rel='stylesheet' type='text/css'>
 	<link href="/assets/homes.scss" rel="stylesheet" type="text/css">
-	
+
 	<link href="/assets/songs.scss" rel="stylesheet" type="text/css">
 
 
@@ -11,7 +15,7 @@
     </header>
 
     <section class="main-controls">
-      <canvas class="visualizer"></canvas> 
+      <canvas class="visualizer"></canvas>
       <button class="record">Record</button>
       <button class="stop">Stop</button>
 
@@ -19,7 +23,7 @@
 
     <section class="sound-clips">
 
-    
+
 
     </section>
 
@@ -27,17 +31,16 @@
 
   <label for="toggle">❔</label>
   <input type="checkbox" id="toggle">
- 
 
 
-      
-    <script src="/assets/mohamed2.js"></script>  
+
+
+    <script src="/assets/mohame2.js"></script>
 
 
 
     <script src="/assets/mohamed.js"></script>
 
-<div id= "piano">
 
 
 	<ul class="set">
@@ -121,7 +124,7 @@
       </div>
 		</div>
 	</ul>
-	
+
 </div>
 
 <div>
