partially resolved styling issues with the piano and song-record controller interface in songs/new.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,15 +15,21 @@
 
 @import "bootstrap";
 
+@import "songs";
+@import "homes";
+
 body {
-	background: black;
-	
+	background: grey;
 }
 
 nav {
 	justify-content: center;
 
 }
+
+// .backdrop	{
+// 	background-color: white;
+// }
 
 // button {
 // 	.dark {
