--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 // Piano Console styling
+
 #piano { 
 	box-sizing: border-box; 
 }
@@ -97,7 +98,8 @@ ul li:first-child {
 }
 
 ul li:last-child { 
-	border-radius:0 5px 5px 5px; 
+  border-radius:0 5px 5px 5px;
+}
 
 // Song Save Controller
 canvas {
@@ -115,10 +117,6 @@ canvas {
 
 /* || main UI sections */
 
-header {
-  height: 70px;
-}
-
 .main-controls {
   padding-bottom: 0.7rem;
   height: 170px;
@@ -130,7 +128,6 @@ header {
   height: calc(100% - 240px - 0.7rem);
   overflow: scroll;
 }
-
 
 /* || button styling */
 
@@ -174,20 +171,20 @@ label {
 }
 
 input[type=checkbox] {
-   position: absolute;
-   top: -100px;
+  position: absolute;
+  top: -100px;
 }
 
 aside {
-   position: fixed;
-   top: 0;
-   left: 0;
-   text-shadow: 1px 1px 1px black;  
-   width: 100%;
-   height: 100%;
-   transform: translateX(100%);
-   transition: 0.6s all;
-   background-color: #999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  text-shadow: 1px 1px 1px black;  
+  width: 100%;
+  height: 100%;
+  transform: translateX(100%);
+  transition: 0.6s all;
+  background-color: #999;
 	background-image: linear-gradient(to top right, rgba(0,0,0,0), rgba(0,0,0,0.5));
 }
 
@@ -229,7 +226,7 @@ article p {
   display: inline-block;
   margin: 0;
   width: 70%;
-  float: left;
+  // float: left;
   margin-left: calc(10%/2);
 }
 
@@ -273,12 +270,12 @@ article button {
   /*CSS for wide screens*/
 
   aside {
-   top: 0;
-   left: 100%;
-   text-shadow: 1px 1px 1px black;  
-   width: 480px;
-   transform: translateX(0);
-   border-left: 2px solid black;
+  top: 0;
+  left: 100%;
+  text-shadow: 1px 1px 1px black;  
+  width: 480px;
+  transform: translateX(0);
+  border-left: 2px solid black;
   }
 
   /* Toggled State of information box */
@@ -286,7 +283,6 @@ article button {
   input[type=checkbox]:checked ~ aside {
     transform: translateX(-480px);
   }
-
 }
 
 @media (min-width: 1100px) {
