--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,46 +1,6 @@
-<link href='http://fonts.googleapis.com/css?family=Dancing+Script:700' rel='stylesheet' type='text/css'>
-	<link href="/assets/homes.scss" rel="stylesheet" type="text/css">
-	
-	<link href="/assets/songs.scss" rel="stylesheet" type="text/css">
-
-
-
-
-<header>
-      <h1>Berk players </h1>
-    </header>
-
-    <section class="main-controls">
-      <canvas class="visualizer"></canvas> 
-      <button class="record">Record</button>
-      <button class="stop">Stop</button>
-
-    </section>
-
-    <section class="sound-clips">
-
-    
-
-    </section>
-
-  </div>
-
-  <label for="toggle">❔</label>
-  <input type="checkbox" id="toggle">
- 
-
-
-      
-    <script src="/assets/mohamed2.js"></script>  
-
-
-
-    <script src="/assets/mohamed.js"></script>
 
 <div id= "piano">
-
-
-	<ul class="set">
+	<ul class="set backdrop">
 		<p class="brand">Piano Brand</p>
 		<div class="keys">
 
@@ -108,13 +68,21 @@
 						E4<br>J
 					</div>
 				</li>
-<<<<<<< HEAD
 			</div>
 		
-=======
-      </div>
->>>>>>> master
 		</div>
 	</ul>
-	
+	<div class="backdrop">
+		<section class="main-controls">
+			<canvas class="visualizer"></canvas> 
+			<button class="record">Record</button>
+			<button class="stop">Stop</button>
+		</section>
+		<section class="sound-clips">
+		
+		</section>
+
+		<label for="toggle">❔</label>
+		<input type="checkbox" id="toggle">
+  </div>
 </div>
