--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -72,17 +72,20 @@
 		
 		</div>
 	</ul>
-	<div class="backdrop">
-		<section class="main-controls">
-			<canvas class="visualizer"></canvas> 
-			<button class="record">Record</button>
-			<button class="stop">Stop</button>
-		</section>
-		<section class="sound-clips">
+	<div class="card">
+		<div class="card-body">
 		
-		</section>
+				<section class="main-controls">
+					<canvas class="visualizer"></canvas> 
+					<button class="record">Record</button>
+					<button class="stop">Stop</button>
+				</section>
+				<section class="sound-clips">
+				
+				</section>
 
-		<label for="toggle">❔</label>
-		<input type="checkbox" id="toggle">
+				<label for="toggle">❔</label>
+				<input type="checkbox" id="toggle">
+		</div>
   </div>
 </div>
