--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -160,15 +160,15 @@ button:active {
 
 /* || Checkbox hack to control information box display */
 
-label {
-	font-family: 'NotoColorEmoji';
-	font-size: 3rem;
-	position: absolute;
-	top: 2px;
-	right: 3px;
-	z-index: 5;
-	cursor: pointer;
-}
+// label {
+// 	font-family: 'NotoColorEmoji';
+// 	font-size: 3rem;
+// 	position: absolute;
+// 	top: 2px;
+// 	right: 3px;
+// 	z-index: 5;
+// 	cursor: pointer;
+// }
 
 input[type=checkbox] {
   position: absolute;
