--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,6 +1,28 @@
-<div>
-  <h1 class="text-center">Welcome To Piano Press </h1>
-  <p class="text-center">Feel the Breeze</p>
+
+<div class="row">
+<div class="col-2"></div>
+  <div class="col-3 mt-5">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="text-center">Why ScaleGrey?</h3>
+      </div>
+      <div class="card-text">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rerum est tempora incidunt voluptatibus facilis, quam cupiditate accusamus eius, earum consequuntur facere quia deleniti libero quisquam nulla maxime deserunt nihil?</p>
+      </div>
+    </div>
+  </div>
+<div class="col-2"></div>
+  <div class="col-3 mt-5">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="text-center">How to use ScaleGrey?</h3>
+      </div>
+      <div class="card-text">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error rerum est tempora incidunt voluptatibus facilis, quam cupiditate accusamus eius, earum consequuntur facere quia deleniti libero quisquam nulla maxime deserunt nihil?</p>
+      </div>
+    </div>
+  </div>
+<div class="col-2"></div>
 </div>
 
 
