--- a/app/views/homes/profile.html.erb
+++ b/app/views/homes/profile.html.erb
@@ -1,5 +1,32 @@
 <h2 class="text-center">Welcome back <%= @user.username %></h2>
 
+<div class="col-2"></div>
+<div class="col-4">
+  <div class="card">
+    <div class="card-header">
+      <h3 class="text-center">Your Profile</h3>
+    </div>
+    
+    <div class="card-text">
+      <p class="text-center"><strong>Username:</strong></p>
+      <p class="text-center"><%= @user.username %></p> 
+
+      <p class="text-center"><strong>Email:</strong></p> 
+      <p class="text-center"><%= @user.email %></p> 
+
+      <p class="text-center"><strong>Song Count:</strong></p> 
+      <p class="text-center">Feature in Development</p> 
+
+      <p class="text-center"><strong>Member Since:</strong></p> 
+      <p class="text-center"><%= @user.created_at.strftime("%B %d, %Y") %></p> 
+
+      <p class="text-center"><strong></strong></p> 
+      <p class="text-center"><%=  %></p> 
+
+    </div>
+    <%= link_to 'Edit Profile', edit_user_registration_path, :class => 'btn btn-dark btn-lg' %>
+  </div>
+</div>
 
 
-<%= link_to 'Edit Profile', edit_user_registration_path, :class => 'btn btn-light btn-lg' %>
+
