--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Songs#index</h1>
-<p>Find me in app/views/songs/index.html.erb</p>
+<h1>Song Gallery</h1>
+
+<div class="row">
+<div class="col-4">
+  </div>
+    <div class="card col-4 p-3 border-dark">
+      <div class="card-header">
+        <h2 class="text-center"> <%=  %> </h2>
+      </div>
+      <div>
+
+      </div>
+      <button class="btn btn-lg btn-dark">Play</button>
+    </div>
+  <div class="col-4">
+  </div>
+</div>
