--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,15 +1,15 @@
-<h1>Song Gallery</h1>
 
 <div class="row">
 <div class="col-4">
   </div>
     <div class="card col-4 p-3 border-dark">
       <div class="card-header">
-        <h2 class="text-center"> <%= %> </h2>
+        <h2 class="text-center"> <%= @song.title %> </h2>
       </div>
       <div>
-
+        song content
       </div>
+      <button class="btn btn-lg btn-dark">Play</button>
     </div>
   <div class="col-4">
   </div>
