--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -4,19 +4,19 @@
 
 // Piano Console styling
 
-#piano { 
-	box-sizing: border-box; 
+#piano {
+	box-sizing: border-box;
 }
 
 .set {
-	height:20em; 
+	height:20em;
 	width:36em;
-	margin:5em auto; 
-	padding:3em 3em 0 3em; 
+	margin:5em auto;
+	padding:3em 3em 0 3em;
 	position: unset;
 	border:1px solid #160801; border-radius:1em;
 	background:-webkit-gradient(linear, right bottom, left top, color-stop(0%,rgba(0,0,0,0.3)), color-stop(100%,rgba(0,0,0,0)));
-	box-shadow:0 0 50px rgba(0,0,0,0.5) inset, 0 1px rgba(212,152,125,0.2) inset,0 5px 15px rgba(0,0,0,0.5); 
+	box-shadow:0 0 50px rgba(0,0,0,0.5) inset, 0 1px rgba(212,152,125,0.2) inset,0 5px 15px rgba(0,0,0,0.5);
 }
 
 .backdrop	{
@@ -35,7 +35,7 @@
 }
 
 .white-key {
-	height:16em; 
+	height:16em;
 	width:4em;
 	z-index:1;
 	border-left:1px solid #bbb;
@@ -45,7 +45,7 @@
 	background: white;
 }
 
-.white-key:active {
+.white-animate{
 	border-top:1px solid #777;
 	border-left:1px solid #999;
 	border-bottom:1px solid #999;
@@ -54,9 +54,9 @@
 }
 
 .black-key {
-	height:8em; 
-	width:2em; 
-	margin:0 0 0 -1em; 
+	height:8em;
+	width:2em;
+	margin:0 0 0 -1em;
 	z-index:2;
 	border:1px solid #000;
 	border-radius:0 0 3px 3px;
@@ -64,12 +64,12 @@
 	background:linear-gradient(45deg, #222 0%,#555 100%);
 }
 
-.black-key:active {
+.black-animate {
 	box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset, 0 -2px 2px 3px rgba(0,0,0,0.6) inset, 0 1px 2px rgba(0,0,0,0.5);
 	background:linear-gradient(left, #444 0%,#222 100%);
 }
 
-.a,.g,.f,.d,.c { 
+.a,.g,.f,.d,.c {
 	margin:0 0 0 -1em;
 }
 
@@ -85,19 +85,19 @@
 	font-size: 65%;
 }
 
-li { 
-	margin:0; 
+li {
+	margin:0;
 	padding:0;
-	list-style:none; 
-	position: relative; 
+	list-style:none;
+	position: relative;
 	float: left;
 }
 
-ul li:first-child { 
+ul li:first-child {
 	border-radius:5px 0 5px 5px;
 }
 
-ul li:last-child { 
+ul li:last-child {
   border-radius:0 5px 5px 5px;
 }
 
@@ -123,30 +123,34 @@ canvas {
 }
 
 .sound-clips {
+	margin-left: 25vw;
+	padding-top: 0.2vw;
   box-shadow: inset 0 3px 4px rgba(0,0,0,0.7);
   background-color: rgba(0,0,0,0.1);
-  height: calc(100% - 240px - 0.7rem);
-  overflow: scroll;
+  // height: calc(100% - 240px - 0.7rem);
+	width: 50em;
+	height: auto;
+  overflow: hidden;
 }
 
 /* || button styling */
 
 button {
     background: #0088cc;
-    background: linear-gradient(to bottom,  #0088cc 0%,#0055cc 100%); 
-    text-shadow: 1px 1px 1px black;  
+    background: linear-gradient(to bottom,  #0088cc 0%,#0055cc 100%);
+    text-shadow: 1px 1px 1px black;
     text-align: center;
     color: white;
     border: none;
 }
 
-aside button, .main-controls button {    
+aside button, .main-controls button {
     width: 90%;
     margin: 1rem auto 0.5rem;
     max-width: 80%;
-    font-size: 1.6rem; 
+    font-size: 1.6rem;
     line-height: 3rem;
-    padding: .5rem; 
+    padding: .5rem;
     display: block;
 }
 
@@ -160,15 +164,15 @@ button:active {
 
 /* || Checkbox hack to control information box display */
 
-// label {
-// 	font-family: 'NotoColorEmoji';
-// 	font-size: 3rem;
-// 	position: absolute;
-// 	top: 2px;
-// 	right: 3px;
-// 	z-index: 5;
-// 	cursor: pointer;
-// }
+label {
+	font-family: 'NotoColorEmoji';
+	font-size: 3rem;
+	position: absolute;
+	top: 2px;
+	right: 3px;
+	z-index: 5;
+	cursor: pointer;
+}
 
 input[type=checkbox] {
   position: absolute;
@@ -179,7 +183,7 @@ aside {
   position: fixed;
   top: 0;
   left: 0;
-  text-shadow: 1px 1px 1px black;  
+  text-shadow: 1px 1px 1px black;
   width: 100%;
   height: 100%;
   transform: translateX(100%);
@@ -205,6 +209,8 @@ input[type=checkbox]:checked ~ aside {
 /* audio styling */
 
 .clip {
+	display: flex;
+	flex-direction: column;
 	padding: 1rem 0;
 }
 
@@ -226,7 +232,7 @@ article p {
   display: inline-block;
   margin: 0;
   width: 70%;
-  // float: left;
+  float: left;
   margin-left: calc(10%/2);
 }
 
@@ -242,7 +248,7 @@ article button {
 
   /* || Basic layout changes for the main control buttons */
 
-  .main-controls button {    
+  .main-controls button {
     width: 45%;
     margin: 1rem 2% 0;
     float: left;
@@ -253,9 +259,12 @@ article button {
     height: 125px;
   }
 
-  .sound-clips {
-    height: calc(100% - 195px - 0.7rem);
-  }
+	.sound-clips {
+  box-shadow: inset 0 3px 4px rgba(0,0,0,0.7);
+  background-color: rgba(0,0,0,0.1);
+  height: calc(100% - 240px - 0.7rem);
+  overflow: scroll;
+	}
 }
 
 @media (min-width: 481px) and (max-height: 460px) {
@@ -272,7 +281,7 @@ article button {
   aside {
   top: 0;
   left: 100%;
-  text-shadow: 1px 1px 1px black;  
+  text-shadow: 1px 1px 1px black;
   width: 480px;
   transform: translateX(0);
   border-left: 2px solid black;
