--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,11 +1,15 @@
-<script src="/assets/mohame2.js" defer></script>
-<script src="/assets/mohamed.js" defer></script>
+
+
+<link href='http://fonts.googleapis.com/css?family=Dancing+Script:700' rel='stylesheet' type='text/css'>
+	<link href="/assets/homes.scss" rel="stylesheet" type="text/css">
+
+	<link href="/assets/songs.scss" rel="stylesheet" type="text/css">
 
 <div id="piano">
 
 
 
-	<ul class="set">
+	<ul class="set backdrop">
 		<p class="brand">Piano Brand</p>
 		<div class="keys">
 
@@ -74,24 +78,35 @@
 					</div>
 				</li>
 			</div>
-		
+
 		</div>
 	</ul>
+</div>
+	<section class="main-controls">
+      <canvas class="visualizer"></canvas>
+      <button class="record">Record</button>
+      <button class="stop">Stop</button>
 
-	<div class="card">
-		<div class="card-body">
-		
-				<section class="main-controls">
-					<canvas class="visualizer"></canvas> 
-					<button class="record">Record</button>
-					<button class="stop">Stop</button>
-				</section>
-				<section class="sound-clips">
-				
-				</section>
+    </section>
 
-				<label for="toggle">❔</label>
-				<input type="checkbox" id="toggle">
-		</div>
+    <section class="sound-clips">
+
+
+
+    </section>
+
   </div>
+
+  <label for="toggle">❔</label>
+  <input type="checkbox" id="toggle">
+
+
+
+
+    <script src="/assets/mohame2.js"></script>
+
+
+
+    <script src="/assets/mohamed.js"></script>
+
 </div>
