--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -9,12 +9,12 @@
       <div>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
-          
+
           <div class="field">
             <%= f.label :username %><br />
-            <%= f.username_field :username, autofocus: true %>
+            <%= f.text_field :username, autofocus: true %>
           </div>
-      
+
           <div class="field">
             <%= f.label :email %><br />
             <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
