added id to label element in recorder control to fix overlap.

--- a/app/assets/stylesheets/songs.scss
+++ b/app/assets/stylesheets/songs.scss
@@ -164,7 +164,7 @@ button:active {
 
 /* || Checkbox hack to control information box display */
 
-label {
+#recorder label {
 	font-family: 'NotoColorEmoji';
 	font-size: 3rem;
 	position: absolute;
