--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
           <%= link_to 'Songs', songs_path, :class => 'btn btn-light btn-lg' %>
           <%= link_to 'Piano', new_song_path, :class => 'btn btn-light btn-lg' %>
         </div>
+        <div class="">
+          <h1 class="ml-2 mr-2">ScaleGrey Piano</h1>
+        </div>
         <div class="justify-content-end">
           <%= link_to "Sign up", new_user_registration_path, :class => 'btn btn-light btn-lg' %>
           <%= link_to "Login", new_user_session_path, :class => 'btn btn-light btn-lg' %>
