--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -97,7 +97,7 @@
 
   </div>
 
-  <label for="toggle">❔</label>
+  <label id="recorder" for="toggle">❔</label>
   <input type="checkbox" id="toggle">
 
 
